# consensus-agent

./: .dockerignore  .env.template  .gitignore  .railwayignore  ADMIN_PANEL_ADD_MODEL_FIX.md  ADMIN_PANEL_FIXES_SUMMARY.md  AI_ASSISTANT_INTEGRATION_GUIDE.md  AUTOMATIC_OAUTH_DEPLOYMENT.md  CONSENSUS_AGENT_UI_MODERNIZATION_PLAN.md  CONSENSUS_CONTEXT_CONTINUITY_FIX.md  CONSENSUS_ENGINE_FIX_SUMMARY.md  DALLE_ROUTING_FIX_SUMMARY.md  Dockerfile  FILE_ATTACHMENT_MODAL_FIX.md  FORCE_REBUILD.md  FUNCTION_CALLING_LOOP_COMPLETE.md  GOOGLE_DRIVE_FUNCTION_CALLING_COMPLETE.md  GOOGLE_DRIVE_INTEGRATION_COMPLETE.md  GOOGLE_DRIVE_INTEGRATION_GUIDE.md  GOOGLE_DRIVE_LLM_ISSUES_FIXED.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_BASE_FIX_SUCCESS.md  KNOWLEDGE_BASE_INTEGRATION_FIX_COMPLETE.md  LLM_NATURAL_MARKDOWN_FIX.md  LLM_PROVIDER_CAPABILITIES_SUMMARY.md  LLM_models_to_use.md  MANUAL_TEST_PLAN_SOCKETIO_FIX.md  MODERN_CHAT_UI_REDESIGN_PLAN.md  MULTI_PROVIDER_TOOL_STRATEGY.md  OPENAI_RESPONSES_API_FIX.md  OPENAI_RESPONSES_API_IMPLEMENTATION.md  Payload Structure for Open WebUI Pipe Functions.md  RAILWAY_DATA_PERSISTENCE_GUIDE.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_OAUTH_DEPLOYMENT.md  RAILWAY_VS_LOCAL_GUIDE.md  README.md  RESPONSES_API_FUNCTION_CALLING_FIX_COMPLETE.md  SOCKETIO_FIX_COMPLETE.md  (+60 more)
backend/: .env.example  Dockerfile  README.md  add_grok4.py  check_db.py  check_grok_models.py  check_image_models.py  check_model_order.py  debug_google_config.py  debug_model_structure.py  debug_models.py  deepseek_results.txt  dev.py  fix_enum_values.py  fix_mixed_case_status.py  init_db.py  migrate_llm_models_schema.py  migrate_railway_db.py  requirements-dev.txt  requirements.txt  run_server.py  setup.py  simple_railway_migration.py  start.bat  test_all_openai_tools.py  test_api_endpoint.py  test_api_response_format.py  test_approval_workflow.py  test_auth_flow.py  test_backend.py  test_comprehensive_seeding.py  test_date_awareness.py  test_deepseek_capabilities.py  test_end_to_end_google_drive.py  test_fastapi_endpoint.py  test_frontend_simulation.py  test_google_drive_tools_simple.py  test_google_oauth.py  test_grok_web_search.py  test_migration_complete.py  (+6 more)
docs/: DOCUMENT_APPROVAL_WORKFLOW_USER_GUIDE.md  GOOGLE_DRIVE_SETUP.md  chat-🔍 Google Drive File Search.txt
documentation_fixes/: ADMIN_PANEL_STREAMLINING.md  COMPREHENSIVE_LLM_MODELS_UPDATE_COMPLETE.md  CONSENSUS_ENGINE_TOOLS_IMPLEMENTATION.md  CONSENSUS_FIX_SUMMARY.md  CONSENSUS_JSON_BUG_FIX.md  ENHANCED_LOADING_INDICATORS.md  FILE_ATTACHMENT_UI_FIX.md  FRONTEND_UX_FIXES_SUMMARY.md  FUNCTION_CALLING_FIX_COMPLETE.md  KNOWLEDGE_BASE_FIX_SUCCESS.md  (+10 more)
(+212 files in other folders)
