[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consensus-agent"
version = "0.1.0"
description = "Consensus Agent - Multi-LLM Collaborative AI Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core FastAPI dependencies
    "fastapi==0.115.13",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.20",
    # Database
    "sqlalchemy==2.0.41",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.30.0",
    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "python-dotenv==1.0.0",
    # OpenAI APIs
    "openai==1.91.0",
    "openai-agents==0.0.19",
    # Google APIs
    "google-auth==2.23.4",
    "google-auth-oauthlib==1.1.0",
    "google-auth-httplib2==0.1.1",
    "google-api-python-client==2.108.0",
    # File handling
    "pypdf2==3.0.1",
    "python-docx==1.1.0",
    "openpyxl==3.1.2",
    "markdown==3.5.1",
    # Real-time communication
    "python-socketio==5.10.0",
    # HTTP requests
    "httpx==0.28.1",
    "aiofiles==23.2.1",
    # Data validation
    "pydantic==2.11.7",
    "pydantic-settings==2.10.0",
    # Background tasks
    "celery==5.3.4",
    "redis==5.0.1",
    "aiosqlite>=0.21.0",
    "aiohttp>=3.12.14",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio",
    "pytest-mock",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.setuptools]
# Disable automatic package discovery to avoid conflicts
packages = []

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio",
    "pytest-mock", 
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["backend/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
